Fix Bug in Overflow_Visible

--- a/Css_Practise/CSS_Layout_Overflow/CSS_Overflow_Visible/index.css
+++ b/Css_Practise/CSS_Layout_Overflow/CSS_Overflow_Visible/index.css
@@ -1,9 +1,9 @@
 #overflowtest {
     background: grey;
-    color: white;
-    padding: 20px;
+    color: black;
+    padding: 10px;
     border: 2px solid rgb(161, 12, 87);
-    width: 50%;
+    width: 200px;
     height: 80px;
     overflow: visible;
     font-size: 20px;
